--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,72 @@ jobs:
         - make e2e-tests-cover
       after_success:
         - bash <(curl -s https://codecov.io/bash) -f /tmp/e2e-cov.out -F e2e
+    - stage: Build&Test
+      arch: arm64
+      name: "Build"
+      script:
+        - make cmd
+        - make examples
+    - name: "Code linter"
+      arch: arm64
+      script: make lint || true
+    - name: "Unit tests"
+      arch: arm64
+      before_script:
+        - go get github.com/mattn/goveralls
+      script: make test-cover
+      after_success:
+        - goveralls -coverprofile=/tmp/coverage.out -service=travis-ci
+        - bash <(curl -s https://codecov.io/bash) -f /tmp/coverage.out -F unittests
+
+    - stage: Integration
+      arch: arm64
+      env: VPP_VERSION=1904
+      script:
+        - make verify-binapi
+        - make integration-tests
+    - env: VPP_VERSION=1908
+      arch: arm64
+      script:
+        - make verify-binapi
+        - make integration-tests
+    - env: VPP_VERSION=2001
+      arch: arm64
+      script:
+        - make verify-binapi
+        - make integration-tests
+    - env: VPP_VERSION=2005
+      arch: arm64
+      script:
+        - make verify-binapi
+        - make integration-tests
+
+    - stage: E2E
+      arch: arm64
+      env: VPP_VERSION=1904
+      script:
+        - make e2e-tests-cover
+      after_success:
+        - bash <(curl -s https://codecov.io/bash) -f /tmp/e2e-cov.out -F e2e
+    - env: VPP_VERSION=1908
+      arch: arm64
+      script:
+        - make e2e-tests-cover
+      after_success:
+        - bash <(curl -s https://codecov.io/bash) -f /tmp/e2e-cov.out -F e2e
+    - arch: arm64
+      env: VPP_VERSION=2001
+      script:
+        - make e2e-tests-cover
+      after_success:
+        - bash <(curl -s https://codecov.io/bash) -f /tmp/e2e-cov.out -F e2e
+    - arch: arm64
+      env: VPP_VERSION=2005
+      script:
+        - make e2e-tests-cover
+      after_success:
+        - bash <(curl -s https://codecov.io/bash) -f /tmp/e2e-cov.out -F e2e
+
 
   allow_failures:
     - env: VPP_VERSION=1904
